[package]
name = "math_quiz"
version = "0.2.0"
authors = ["Harold Bien"]
description = "An adaptive math quiz"
keywords = ["math","quiz","education"]
categories = ["education"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
rand="0.8.5"
serde = { version="1.0.204", features=["derive"] }
serde_json = "1.0"
